# lago-rust-client

./: .gitignore  Cargo.toml  README.md
.github/workflows/: ci.yml
.openapi-generator/: FILES
docs/: AddOn.md  AddOnInput.md  AddOnInputAddOn.md  AddOnObject.md  AddOns.md  AddOnsApi.md  AddOnsPaginated.md  ApiResponseBadRequest.md  ApiResponseForbidden.md  ApiResponseNotAllowed.md  ApiResponseNotFound.md  ApiResponseUnauthorized.md  ApiResponseUnprocessableEntity.md  AppliedAddOn.md  AppliedAddOnInput.md  AppliedAddOnInputAppliedAddOn.md  AppliedAddOnObject.md  AppliedCoupon.md  AppliedCouponInput.md  AppliedCouponInputAppliedCoupon.md  AppliedCouponObject.md  AppliedCouponObjectExtended.md  AppliedCouponObjectExtendedAllOf.md  AppliedCoupons.md  AppliedCouponsPaginated.md  BatchEventInput.md  BatchEventInputEvent.md  BillableMetric.md  BillableMetricGroup.md  BillableMetricGroupValuesInner.md  BillableMetricInput.md  BillableMetricInputBillableMetric.md  BillableMetricObject.md  BillableMetrics.md  BillableMetricsApi.md  BillableMetricsPaginated.md  BillingConfigurationCustomer.md  BillingConfigurationOrganization.md  ChargeObject.md  ChargeUsageObject.md  (+110 more)
lago-client/: Cargo.toml  README.md
lago-client/examples/: activity_log.rs  api_log.rs  applied_coupon.rs  basic_usage.rs  billable_metric.rs  coupon.rs  credit_note.rs  custom_configuration.rs  customer.rs  customer_usage.rs  event.rs  fee.rs  invoice.rs  payment.rs  plan.rs  subscription.rs
lago-client/src/: client.rs  config.rs  credentials.rs  lib.rs  observability.rs  queries.rs  region.rs  retry.rs
lago-client/src/queries/: activity_log.rs  api_log.rs  applied_coupon.rs  billable_metric.rs  coupon.rs  credit_note.rs  customer.rs  customer_usage.rs  event.rs  fee.rs  invoice.rs  payment.rs  plan.rs  plan_charge.rs  subscription.rs  subscription_charge.rs
lago-client/tests/: plan_integration_test.rs
lago-types/: Cargo.toml  LICENSE  README.md
lago-types/src/: error.rs  filters.rs  lib.rs  models.rs  requests.rs  responses.rs
lago-types/src/filters/: activity_log.rs  api_log.rs  applied_coupon.rs  billable_metric.rs  common.rs  coupon.rs  credit_note.rs  customer.rs  date_range.rs  fee.rs  invoice.rs  plan.rs  subscription.rs
lago-types/src/models/: activity_log.rs  api_log.rs  applied_coupon.rs  billable_metric.rs  charge.rs  common.rs  coupon.rs  credit_note.rs  customer.rs  customer_usage.rs  event.rs  fixed_charge.rs  invoice.rs  pagination.rs  payment.rs  plan.rs  subscription.rs  usage_threshold.rs
lago-types/src/requests/: activity_log.rs  api_log.rs  applied_coupon.rs  billable_metric.rs  coupon.rs  credit_note.rs  customer.rs  customer_usage.rs  event.rs  fee.rs  invoice.rs  payment.rs  plan.rs  plan_charge.rs  subscription.rs  subscription_charge.rs
lago-types/src/responses/: activity_log.rs  api_log.rs  applied_coupon.rs  billable_metric.rs  coupon.rs  credit_note.rs  customer.rs  customer_usage.rs  event.rs  fee.rs  invoice.rs  payment.rs  plan.rs  plan_charge.rs  subscription.rs  subscription_charge.rs
src/apis/: add_ons_api.rs  billable_metrics_api.rs  configuration.rs  coupons_api.rs  credit_notes_api.rs  customers_api.rs  events_api.rs  fees_api.rs  invoices_api.rs  mod.rs  organizations_api.rs  plans_api.rs  subscriptions_api.rs  wallets_api.rs  webhooks_api.rs
src/models/: add_on.rs  add_on_input.rs  add_on_input_add_on.rs  add_on_object.rs  add_ons.rs  add_ons_paginated.rs  api_response_bad_request.rs  api_response_forbidden.rs  api_response_not_allowed.rs  api_response_not_found.rs  api_response_unauthorized.rs  api_response_unprocessable_entity.rs  applied_add_on.rs  applied_add_on_input.rs  applied_add_on_input_applied_add_on.rs  applied_add_on_object.rs  applied_coupon.rs  applied_coupon_input.rs  applied_coupon_input_applied_coupon.rs  applied_coupon_object.rs  applied_coupon_object_extended.rs  applied_coupon_object_extended_all_of.rs  applied_coupons.rs  applied_coupons_paginated.rs  batch_event_input.rs  batch_event_input_event.rs  billable_metric.rs  billable_metric_group.rs  billable_metric_group_values_inner.rs  billable_metric_input.rs  billable_metric_input_billable_metric.rs  billable_metric_object.rs  billable_metrics.rs  billable_metrics_paginated.rs  billing_configuration_customer.rs  billing_configuration_organization.rs  charge_object.rs  charge_usage_object.rs  charge_usage_object_billable_metric.rs  charge_usage_object_charge.rs  (+98 more)
