[workspace]
members = ["lago-types", "lago-client"]
resolver = "3"

[workspace.dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.45", features = ["full"] }
reqwest = { version = "0.12", features = ["json", "rustls-tls"] }
thiserror = "2.0"
anyhow = "1.0"
uuid = { version = "1.17", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
url = "2.5"
strum = "0.27"
strum_macros = "0.27"

[workspace.package]
edition = "2024"
version = "0.1.0"
authors = ["Lago Team <tech@getlago.com>"]
license = "MIT"
repository = "https://github.com/getlago/lago-rust-client"
description = "Lago Rust API Client"
homepage = "https://github.com/getlago/lago-rust-client"