[package]
name = "lago-client"
version = "0.1.6"
edition = "2024"
authors = ["Lago Team <tech@getlago.com>"]
description = "Lago API client"
license = "MIT"
repository = "https://github.com/getlago/lago-rust-client"

[dependencies]
# lago-types = "0.1.6"
lago-types = { path = "../lago-types" }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
reqwest = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
url = { workspace = true }

[dev-dependencies]
mockito = "1.4"
tokio-test = "0.4"

[[example]]
name = "basic_usage"
path = "examples/basic_usage.rs"

[[example]]
name = "custom_configuration"
path = "examples/custom_configuration.rs"

[[example]]
name = "billable_metric"
path = "examples/billable_metric.rs"

[[example]]
name = "customer"
path = "examples/customer.rs"

[[example]]
name = "invoice"
path = "examples/invoice.rs"