[package]
name = "lago-client"
version = "0.1.18"
edition = "2024"
authors = ["Lago Team <tech@getlago.com>"]
description = "Lago API client"
license = "MIT"
repository = "https://github.com/getlago/lago-rust-client"

[dependencies]
lago-types = "0.1.18"
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
reqwest = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
url = { workspace = true }
urlencoding = { workspace = true }

[dev-dependencies]
mockito = "1.4"
tokio-test = "0.4"

[[example]]
name = "basic_usage"
path = "examples/basic_usage.rs"

[[example]]
name = "custom_configuration"
path = "examples/custom_configuration.rs"

[[example]]
name = "billable_metric"
path = "examples/billable_metric.rs"

[[example]]
name = "customer"
path = "examples/customer.rs"

[[example]]
name = "invoice"
path = "examples/invoice.rs"

[[example]]
name = "activity_log"
path = "examples/activity_log.rs"

[[example]]
name = "api_log"
path = "examples/api_log.rs"

[[example]]
name = "applied_coupon"
path = "examples/applied_coupon.rs"

[[example]]
name = "coupon"
path = "examples/coupon.rs"

[[example]]
name = "event"
path = "examples/event.rs"

[[example]]
name = "credit_note"
path = "examples/credit_note.rs"

[[example]]
name = "customer_usage"
path = "examples/customer_usage.rs"

[[example]]
name = "subscription"
path = "examples/subscription.rs"

[[example]]
name = "plan"
path = "examples/plan.rs"

[[example]]
name = "payment"
path = "examples/payment.rs"
