[package]
name = "lago-types"
version = "0.1.0"
edition = "2024"
authors = ["Lago Team <tech@getlago.com>"]
description = "Types definitions for Lago API"
license = "MIT"
documentation = "https://docs.rs/lago-types"
repository = "https://github.com/getlago/lago-agent-toolkit"

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
chrono = { workspace = true }
uuid = { workspace = true }
thiserror = { workspace = true }
reqwest = { workspace = true }