[package]
name = "lago-types"
version = "0.1.1"
edition = "2024"
authors = ["Lago Team <tech@getlago.com>"]
description = "Types definitions for Lago API"
license = "MIT"
repository = "https://github.com/getlago/lago-rust-client"

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
chrono = { workspace = true }
uuid = { workspace = true }
thiserror = { workspace = true }
reqwest = { workspace = true }